Remove @MainDex from classes within content/browser

Removed annotation from:
* ContentViewStatics
* WebContentsObserverProxy

and stopped hooking up their JNI methods for renderer process.

Moved FileDescriptorInfo.java from browser/ to common/ since
it is actually required in the renderer.

BUG=643489

Review-Url: https://codereview.chromium.org/2316183002
Cr-Commit-Position: refs/heads/master@{#419462}

Former-commit-id: 9e1613bc13a01a88d24f8b8b158618573bd3d795