content/browser/android/child_process_launcher_android.cc
@@ -167,7 +167,7 @@ void StartChildProcess(
   DCHECK(file_count > 0);
 
   ScopedJavaLocalRef<jclass> j_file_info_class = base::android::GetClass(
-      env, "org/chromium/content/browser/FileDescriptorInfo");
+      env, "org/chromium/content/common/FileDescriptorInfo");
   ScopedJavaLocalRef<jobjectArray> j_file_infos(
       env, env->NewObjectArray(file_count, j_file_info_class.obj(), NULL));
   base::android::CheckException(env);
