content/public/android/javatests/src/org/chromium/content/browser/ChildProcessLauncherTest.java
@@ -16,6 +16,7 @@ import org.chromium.base.test.util.CommandLineFlags;
 import org.chromium.base.test.util.Feature;
 import org.chromium.content.browser.test.util.Criteria;
 import org.chromium.content.browser.test.util.CriteriaHelper;
+import org.chromium.content.common.FileDescriptorInfo;
 
 import java.util.concurrent.Callable;
 
